5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1593_1801.log
== TEST (2019-03-28 10:39:51) 
-- CODE:
a = input("Abra + " " ")
b = int(input("numero de repeticoes: "))


-- OUTPUT:
Abra +
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:40:26) 
-- CODE:
a = input("Abra + :" " ")
b = int(input("numero de repeticoes: "))


-- OUTPUT:
Abra + :
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:42:32) 
-- CODE:
a = input("Abra:" " ")
b = int(input("numero de repeticoes: "))

c = Abra + a
d = d*b

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = Abra + a
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:43:13) 
-- CODE:
a = input("Abra:" " ")
b = int(input("numero de repeticoes: "))

c = ("Abra + a")
d = d*b

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    d = d*b
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:43:45) 
-- CODE:
a = input("Abra:" " ")
b = int(input("numero de repeticoes: "))

c = ("Abra + a")
d = c*b

print(d)
-- OUTPUT:
Abra: Abra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:44:29) 
-- CODE:
a = input("Abra:" " ")
b = int(input("numero de repeticoes: "))

c = "Abra + a"
d = c*b

print(d)
-- OUTPUT:
Abra: Abra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:05) 
-- CODE:
a = input("Abra:" " ")
b = int(input("numero de repeticoes: "))

c = Abra + a
d = c*b

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = Abra + a
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:32) 
-- CODE:
a = input("Abra: ")
b = int(input("numero de repeticoes: "))

c = (Abra + a)
d = c*b

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = (Abra + a)
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:45:52) 
-- CODE:
a = input("Abra: ")
b = int(input("numero de repeticoes: "))

c = ("Abra + a")
d = c*b

print(d)
-- OUTPUT:
Abra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + aAbra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:47:07) 
-- CODE:
a = input("Abra: ")
b = int(input("numero de repeticoes: "))

c = a + b
d = c * d

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c = a + b
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:04) 
-- CODE:
a = input("Abra: ")
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

e = ("a + b") * c

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:55) 
-- CODE:
a = input("Abra: ")
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

e = (a + b) * c

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:06:39) 
-- CODE:

b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

e = (a + b) * c

print( "abra", e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    e = (a + b) * c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:07:55) 
-- CODE:

a = input("nome do objeto: ")
b = int(input("numero de repeticoes: "))

c = ("abra + a") 
d = c*b

print( "abra", d)
-- OUTPUT:
abra abra + aabra + aabra + aabra + aabra + aabra + aabra + aabra + a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:08:24) 
-- CODE:

a = input("nome do objeto: ")
b = int(input("numero de repeticoes: "))

c = ("abra" + (a)) 
d = c*b

print( "abra", d)
-- OUTPUT:
abra abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:08:53) 
-- CODE:

a = input("nome do objeto: ")
b = int(input("numero de repeticoes: "))

c = a 
d = c*b

print( "abra", d)
-- OUTPUT:
abra livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:09:28) 
-- CODE:

a = input("nome do objeto: ")
b = int(input("numero de repeticoes: "))

c = abra + a 
d = c*b

print( "abra", d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = abra + a 
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:09:47) 
-- CODE:

a = input("nome do objeto: ")
b = int(input("numero de repeticoes: "))

c = ("abra") + a 
d = c*b

print( "abra", d)
-- OUTPUT:
abra abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:09) 
-- CODE:

a = input("nome do objeto: ")
b = int(input("numero de repeticoes: "))

c = ("abra") + a 
d = c*b

print( "abra" , d)
-- OUTPUT:
abra abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:12:30) 
-- CODE:
a = input( "abra: ")
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("a + b")
e = ("d*c")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:12:53) 
-- CODE:
a = input( "abra: ")
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("a + b")
e = (d*c)

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:13:08) 
-- CODE:
a = input( "abra: ")
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = (a + b)
e = (d*c)

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:15:25) 
-- CODE:

b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("abra " + b)
e = (d*c)

print(e)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:16:32) 
-- CODE:

b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("abra " + b + " ")
e = (d*c)

print(e)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:17:19) 
-- CODE:

b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("abra " + b + " ")
e = (d*c)

print(e)
-- EXECUTION TIME:
0.15713
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:17:33) 
-- CODE:

b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("Abra " + b + " ")
e = (d*c)

print(e)
-- EXECUTION TIME:
0.148813
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:19:36) 
-- CODE:
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("Abra " + b + " ")
e = (d*c)

print(e)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:19:40) 
-- CODE:
b = input("nome do objeto: ")
c = int(input("numero de repeticoes: "))

d = ("Abra " + b + " ")
e = (d*c)

print(e)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
